<resources>
    <string name="app_name">final</string>
    <string name="VibrateOn">vibrate on</string>
    <string name="VibrateOff">vibrate off</string>
    <string name="WiFi">Wi-Fi</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="place">Taipei station</string>
    <string name="checked">checked</string>
    <string name="unchecked">unchecked</string>
    <string name="text_tvText">Please give your review for this book.</string>

    <string name="yangmingshan">Yangmingshan National Park</string>
    <string name="yushan">Yushan National Park</string>
    <string name="taroko">Taroko National Park</string>
    <string name="myloc">My Location</string>
    <string name="exit">Exit</string>
    <string name="text_tvTitle">Press menu button (on the upper right corner)</string>
    <string name="guide">Guide</string>
    <string name="traffic">Traffic</string>
    <string name="clear">Clear</string>
    <string name="background">Change Background Color</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="cyan">Cyan</string>
    <string name="text_btDelete">Delete</string>
    <string name="deleteItem">Delete Selected Item</string>
    <string name="deleteAll">Delete All the Items</string>
    <string name="text_tvFood">Your favorite food</string>
    <string-array name="food_array">
        <item>spaghetti</item>
        <item>dumpling</item>
        <item>sushi</item>
    </string-array>
    <string name="text_tvPlace">Your favorite place</string>
    <string name="text_NothingSelected">Nothing selected!</string>
</resources>
